crates/hird-codegen/tests/snapshots/emit__snapshot_handle_block_extends_handler_map.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "emit(program(\"Audited\"), \"Audited\")"
---
%% Generated from src/audited.hird by the Hirð compiler. Do not edit.
-module(hird_audited).
-export([audited/3, hird_tools@/0]).

%% src/audited.hird:3
audited(F, Logh, Handlers@) ->
    Handlers@3 = maps:merge(Handlers@, #{
        {tool, repo} => fun(Args@1, Handlers@2) -> Logh(Args@1, Handlers@2) end
    }),
    F(0, Handlers@3).

hird_tools@() ->
    #{tools => #{
            repo => #{
                name => <<"Repo"/utf8>>,
                params => 0,
                args => {record, [{x, int}]},
                result => int,
                error => dynamic}},
        types => #{}}.
