crates/hird-codegen/tests/snapshots/emit__snapshot_handle_multi_arm.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "emit(program(\"Multi\"), \"Multi\")"
---
%% Generated from src/multi.hird by the Hirð compiler. Do not edit.
-module(hird_multi).
-export([run/3, hird_tools@/0]).

%% src/multi.hird:3
run(F, Lh, Th) ->
    Handlers@5 = #{
        log => fun(Args@1, _Handlers@2) -> Lh(Args@1) end,
        {tool, repo} => fun(Args@3, _Handlers@4) -> Th(Args@3) end
    },
    F(0, Handlers@5).

hird_tools@() ->
    #{tools => #{
            repo => #{
                name => <<"Repo"/utf8>>,
                params => 0,
                args => {record, [{x, int}]},
                result => int,
                error => dynamic}},
        types => #{}}.
