crates/hird-codegen/tests/snapshots/emit__snapshot_let_shadowing_freshens_variables.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "emit(program(\"Shadow\"), \"Shadow\")"
---
%% Generated from src/shadow.hird by the Hirð compiler. Do not edit.
-module(hird_shadow).
-export([chain/0]).

%% src/shadow.hird:1
chain() ->
    X = 1,
    X@1 = X + 1,
    Y = X@1,
    X@1 + Y.
